--- a/gb/19/10/7/n11573803.md
+++ b/gb/19/10/7/n11573803.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jovjbh3352/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jovjbh3352/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jovjbh3352/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jovjbh3352/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jovjbh3352/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jovjbh3352/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jovjbh3352/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jovjbh3352/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jovjbh3352/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jovjbh3352/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jovjbh3352/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jovjbh3352/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jovjbh3352/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jovjbh3352/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jovjbh3352/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jovjbh3352/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/jovjbh3352/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jovjbh3352/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/jovjbh3352/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jovjbh3352/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jovjbh3352/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jovjbh3352/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jovjbh3352/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jovjbh3352/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>青银共创课程 银发族“玩”出职涯第二春</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/66c1e08e82a8f0049b0b364c3b158e10-600x400.jpg" />
 <h6>新竹市劳工处欢迎中高龄市民朋友加入学习行列 再创事业第二春。 （新竹市府提供）
 </h6>
 <hr>
-<p>【大纪元2019年10月07日讯】（大纪元记者林倩玉台湾新竹报导）为促进<ahref="https://github.com/jovjbh3352/djy/blob/master/gb/tag/%E4%B8%AD%E9%BE%84%E5%A3%AE%E5%B9%B4.md#1">中龄壮年</a>、银发长辈再投入<ahref="https://github.com/jovjbh3352/djy/blob/master/gb/tag/%E5%B0%B1%E4%B8%9A%E5%B8%82%E5%9C%BA.md#1">就业市场</a>，新竹市政府6日发表宣导短片—“<ahref="https://github.com/jovjbh3352/djy/blob/master/gb/tag/%E9%9D%92%E9%93%B6.md#1">青银</a>牵手就业零距离”，以“高年级实习生”浔英姊为主角，走进东门市场创业基地与年轻人玩金工、学习当网美，鼓励<ahref="https://github.com/jovjbh3352/djy/blob/master/gb/tag/%E9%93%B6%E5%8F%91%E6%97%8F.md#1">银发族</a>玩出职涯第二春，成就斜杠人生。</p>
+<p>【大纪元2019年10月07日讯】（大纪元记者林倩玉台湾新竹报导）为促进<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E9%BE%84%E5%A3%AE%E5%B9%B4.md#1">中龄壮年</a>、银发长辈再投入<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B0%B1%E4%B8%9A%E5%B8%82%E5%9C%BA.md#1">就业市场</a>，新竹市政府6日发表宣导短片—“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%9D%92%E9%93%B6.md#1">青银</a>牵手就业零距离”，以“高年级实习生”浔英姊为主角，走进东门市场创业基地与年轻人玩金工、学习当网美，鼓励<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%93%B6%E5%8F%91%E6%97%8F.md#1">银发族</a>玩出职涯第二春，成就斜杠人生。</p>
 <p>新竹市劳工处长黄锦源表示，透过影片希望传达“老不是负担，而是潮流与新力量”，影片主角浔英姊已届古稀之年，仍充满活力，堪称最佳代言人。原来是家庭主妇的浔英姊，直到十年前才走出家庭，努力学习各种技能，探索就业的可能性，对她而言，就业不是为了赚钱，是为了获得更多的成就感，证明老还有价值。她曾在咖啡厅当过吧台手，也在文化局当过故事妈妈，现在从事社区服务工作，持续就业中。</p>
-<p>黄锦源以<ahref="https://github.com/jovjbh3352/djy/blob/master/gb/tag/%E9%9D%92%E9%93%B6.md#1">青银</a>共创课程系列中之“拾光之旅及中高龄准备再出发”为例，透过系统化引导、生命故事整理及创意活动设计，协助中高龄族群重新定位自我价值并发展新人生蓝图。学员李女士感性回馈：“一开始觉得自己人生乏善可陈，上完拾光之旅课程，发现自以为平凡的人生经历，原来也充满励志与感动”。</p>
+<p>黄锦源以<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%9D%92%E9%93%B6.md#1">青银</a>共创课程系列中之“拾光之旅及中高龄准备再出发”为例，透过系统化引导、生命故事整理及创意活动设计，协助中高龄族群重新定位自我价值并发展新人生蓝图。学员李女士感性回馈：“一开始觉得自己人生乏善可陈，上完拾光之旅课程，发现自以为平凡的人生经历，原来也充满励志与感动”。</p>
 <p>自工业技术研究院退休的学员刘大哥，为了剪出具设计感的发型，常回家练习超过6小时，最后的成品令老师十分赞赏。他开心的表示，没想到自己有这样的潜力，如今他更愿意尝试学习，未来也希望职涯第二春，用自己的热情和专业去服务他人。</p>
-<figure id="attachment_11573806" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/3cd428f2faec1d272184ef184dcf79b1.jpg"><img class="size-large wp-image-11573806" src="https://i.epochtimes.com/assets/uploads/2019/10/3cd428f2faec1d272184ef184dcf79b1-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">自工业技术研究院退休的学员刘大哥，为了剪出具设计感的发型，常回家练习超过6小时，最后的成品令老师十分赞赏。（新竹市府提供）</figcaption></figure>
-<p>劳工处说明，因应台湾人口逐渐老化的趋势，政府希望协助有意愿工作的中高龄者及高龄者就业，促进国家劳动力发展与再运用。为开拓中高龄就业力，今年首次尝试针对<ahref="https://github.com/jovjbh3352/djy/blob/master/gb/tag/%E9%93%B6%E5%8F%91%E6%97%8F.md#1">银发族</a>开发促进就业课程，用创意将科技、讲座、DIY等新世代的东西“玩”进长者的职涯学习中。透过多元主题，不仅学习专业知识及技能，更期待让<ahref="https://github.com/jovjbh3352/djy/blob/master/gb/tag/%E4%B9%90%E9%BE%84.md#1">乐龄</a>族走入社区，结合长期在地深耕的高龄服务经验，既实现青银共创理念，也连结了本巿社区及长照单位，作为异业结盟的合作伙伴，整合服务资源，发展银发人才服务。</p>
+<figure id="attachment_11573806" aria-describedby="caption-attachment-11573806" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/10/3cd428f2faec1d272184ef184dcf79b1.jpg"><img class="size-large wp-image-11573806" src="https://i.epochtimes.com/assets/uploads/2019/10/3cd428f2faec1d272184ef184dcf79b1-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-11573806" class="wp-caption-text">自工业技术研究院退休的学员刘大哥，为了剪出具设计感的发型，常回家练习超过6小时，最后的成品令老师十分赞赏。（新竹市府提供）</figcaption></figure>
+<p>劳工处说明，因应台湾人口逐渐老化的趋势，政府希望协助有意愿工作的中高龄者及高龄者就业，促进国家劳动力发展与再运用。为开拓中高龄就业力，今年首次尝试针对<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%93%B6%E5%8F%91%E6%97%8F.md#1">银发族</a>开发促进就业课程，用创意将科技、讲座、DIY等新世代的东西“玩”进长者的职涯学习中。透过多元主题，不仅学习专业知识及技能，更期待让<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%90%E9%BE%84.md#1">乐龄</a>族走入社区，结合长期在地深耕的高龄服务经验，既实现青银共创理念，也连结了本巿社区及长照单位，作为异业结盟的合作伙伴，整合服务资源，发展银发人才服务。</p>
 <p>市民朋友观赏影片后按赞及留言还可参加抽奖活动，详细规则可参阅影片说明。(https://reurl.cc/L1M1WK)</p>
 <p>责任编辑：陈玟绮</p>
 
@@ -19,48 +19,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jovjbh3352/djy/blob/master/gb/19/7/25/n11408127.md#1">政院通过中高龄就业专法 禁止年龄歧视</a></li>
-<li><a href="https://github.com/jovjbh3352/djy/blob/master/gb/19/7/25/n11408624.md#1">台日高龄跨域合作 中正大学打造青银园区</a></li>
-<li><a href="https://github.com/jovjbh3352/djy/blob/master/gb/19/8/12/n11447925.md#1">中高龄求职好机会 竹市企业征才释520职缺</a></li>
-<li><a href="https://github.com/jovjbh3352/djy/blob/master/gb/19/8/27/n11480970.md#1">预防失智 嘉义市首度推广“化妆疗法”</a></li>
-<li><a href="https://github.com/jovjbh3352/djy/blob/master/gb/19/9/15/n11523121.md#1">竹县青银征才18日登场   共创双赢</a></li>
-<li><a href="https://github.com/jovjbh3352/djy/blob/master/gb/19/9/15/n11523385.md#1">会考作文近时事 体验生活也要阅读</a></li>
-<li><a href="https://github.com/jovjbh3352/djy/blob/master/gb/19/9/22/n11538713.md#1">作文选登：青银共居</a></li>
-<li><a href="https://github.com/jovjbh3352/djy/blob/master/gb/20/9/24/n12427114.md#1">“漾young老”时代 认识家庭照顾服务资源</a></li>
-<li><a href="https://github.com/jovjbh3352/djy/blob/master/gb/20/9/24/n12426544.md#1">工研院三位科技精英获颁SEMI产业贡献奖</a></li>
-<li><a href="https://github.com/jovjbh3352/djy/blob/master/gb/20/9/24/n12426517.md#1">赏台湾设计展住新竹一晚 超值好康等你拿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/25/n11408127.md#1">政院通过中高龄就业专法 禁止年龄歧视</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/25/n11408624.md#1">台日高龄跨域合作 中正大学打造青银园区</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/12/n11447925.md#1">中高龄求职好机会 竹市企业征才释520职缺</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/27/n11480970.md#1">预防失智 嘉义市首度推广“化妆疗法”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/15/n11523121.md#1">竹县青银征才18日登场   共创双赢</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/15/n11523385.md#1">会考作文近时事 体验生活也要阅读</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/22/n11538713.md#1">作文选登：青银共居</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680722.md#1">工研院携手致茂办量测论文竞赛 培育技术人才</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680584.md#1">苗栗春祭暨遥祭黄陵联合祭典</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680574.md#1">事迹受肯定 大千三位医事人员获优秀青年表扬</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/17/n11874645.md#1" target="_blank">王友群：习近平的父亲被栽赃陷害16年</a></li><li><a href="https://github.com/jovjbh3352/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/21/n11203160.md#1" target="_blank">一位北京法轮功学员经历的4·25大上访</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10965703.md#1" target="_blank">共产暴政录：广西文革大屠杀事件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/3/8/n2455187.md#1" target="_blank">【热点互动】自焚 中共自导的梦魇(3)</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/13/n12400103.md#1">【命理】羊刃为何可怕 为何叫凶星恶煞？</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/13/n12399903.md#1">古今六大预言 2020年前后的大交集(下)</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/20/n12416763.md#1">译成34种语言 一部童话触动世界人的心灵</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/18/n12412674.md#1">上善若水，水善利万物而不争</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/21/n12419416.md#1">印男花30年独力开凿3公里长河渠 引水入村</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/23/n12425605.md#1">【有冇搞错】中共治港四大失败</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/23/n12425245.md#1">【时事纵横】白宫智囊：中共与自由世界为敌</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/23/n12423617.md#1">【拍案惊奇】联大北京自卑 老任坐牢18年？</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/22/n12420913.md#1">沈舟：中共扰台 美试射战斧对地导弹警告</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/22/n12422727.md#1">陆综《歌手》宣布收摊 张学友曾四度拒绝邀约</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/22/n12421898.md#1">传中共内部激烈分化 想报复川普又不敢</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/21/n12420221.md#1">主动脉剥离分2型 黄鸿升疑最严重 哪些人易得？</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/22/n12422727.md#1">陆综《歌手》宣布收摊 张学友曾四度拒绝邀约</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/21/n12419241.md#1">黄鸿升灵堂开放最终日 林俊杰等艺人到场悼念</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/21/n12419394.md#1">吴宗宪写歌忆黄鸿升 泪唱去天堂行李带够吗</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/22/n12421890.md#1">约百位星友近千粉丝吊唁黄鸿升 黄爸感动致谢</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/21/n12420221.md#1">主动脉剥离分2型 黄鸿升疑最严重 哪些人易得？</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/21/n12419160.md#1">中共称新手驾歼-20击落17架敌机 印媒：宣传</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/22/n12420884.md#1">染发可能引起过敏、致癌 6类人不适合</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/22/n12421552.md#1">中共导弹标靶完好无缺漂到岸边 网民猛调侃</a></li>
-<li><a href="https://github.com/agekkc323/djy/blob/master/gb/20/9/21/n12419059.md#1">浸水四百年仍完好 荷兰帝国商船现波罗的海</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jovjbh3352/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jovjbh3352/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/7/n11573803.htm">青银共创课程 银发族“玩”出职涯第二春</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/7/n11573803.htm">青银共创课程 银发族“玩”出职涯第二春</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jovjbh3352/djy/blob/master/gb/19/10/7/n11573803.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jovjbh3352/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jovjbh3352/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jovjbh3352/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jovjbh3352/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jovjbh3352/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/10/7/n11573803.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
